--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -23,9 +23,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        cd test-project  # Navigate to the project folder
-        pip install -r requirements.txt
+        pip install -r test_project/requirements.txt  # Corrected path to requirements.txt
     - name: Run Tests
       run: |
-        cd test-project  # Navigate to the project folder
-        python manage.py test
+        python test_project/manage.py test  # Corrected path to manage.py
