--- a/test_project/requirements.txt
+++ b/test_project/requirements.txt
@@ -1,135 +1,3 @@
-absl-py==1.4.0
-aiohttp==3.8.4
-aiosignal==1.3.1
-aniso8601==9.0.1
-appnope==0.1.3
-asgiref==3.6.0
-asttokens==2.2.1
-astunparse==1.6.3
-async-timeout==4.0.2
-attrs==23.1.0
-backcall==0.2.0
-bitsandbytes==0.41.0
-blinker==1.6.2
-blis==0.7.9
-cachetools==5.3.0
-catalogue==2.0.8
-certifi==2022.12.7
-charset-normalizer==3.1.0
-click==8.1.3
-comm==0.1.3
-confection==0.1.0
-contourpy==1.1.0
-cycler==0.11.0
-cymem==2.0.7
-datasets==2.13.1
-debugpy==1.6.7
-decorator==5.1.1
-dill==0.3.6
-distlib==0.3.6
 Django==4.1.7
-einops==0.6.1
-elastic-transport==8.4.0
-evaluate==0.4.0
-executing==1.2.0
-filelock==3.9.0
-flatbuffers==23.5.9
-fontawesomefree==6.4.0
-fonttools==4.40.0
-frozenlist==1.3.3
-fsspec==2023.4.0
-fuzzywuzzy==0.18.0
-gast==0.4.0
-google-auth==2.18.0
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-grpcio==1.54.0
-h5py==3.8.0
-idna==3.4
-install==1.3.5
-ipykernel==6.24.0
-ipython==8.14.0
-ipywidgets==8.0.7
-itsdangerous==2.1.2
-jedi==0.18.2
-Jinja2==3.1.2
-joblib==1.3.1
-jsonpickle==3.0.1
-jupyter_client==8.3.0
-jupyter_core==5.3.1
-jupyterlab-widgets==3.0.8
-keras==2.13.1rc0
-kiwisolver==1.4.4
-langcodes==3.3.0
-Markdown==3.4.3
-MarkupSafe==2.1.2
-multidict==6.0.4
-multiprocess==0.70.14
-murmurhash==1.0.9
-nest-asyncio==1.5.6
-networkx==3.1
-oauthlib==3.2.2
-opt-einsum==3.3.0
-packaging==23.1
-parso==0.8.3
-pathy==0.10.2
-patsy==0.5.3
-peft @ git+https://github.com/huggingface/peft.git@e27e8834436b2d248e355c63146d8c20fbdc977e
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.5.0
-platformdirs==3.1.0
-preshed==3.0.8
-prompt-toolkit==3.0.39
-protobuf==4.23.0
-psutil==5.9.5
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyarrow==12.0.1
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pydantic==1.10.11
-Pygments==2.15.1
-pyparsing==3.0.9
-python-dateutil==2.8.2
-pytz==2022.7.1
-PyYAML==6.0
-pyzmq==25.1.0
-regex==2023.3.23
-requests==2.29.0
-requests-oauthlib==1.3.1
-responses==0.18.0
-rouge-score==0.1.2
-rsa==4.9
-safetensors==0.3.1
-six==1.16.0
-smart-open==6.3.0
-spacy==3.6.0
-spacy-legacy==3.0.12
-spacy-loggers==1.0.4
-sqlparse==0.4.3
-srsly==2.4.6
-stack-data==0.6.2
-termcolor==2.3.0
-thinc==8.1.10
-tiktoken==0.5.1
-tokenizers==0.13.3
-torchdata==0.6.1
-torchtext==0.15.2
-tornado==6.3.2
-tqdm==4.65.0
-traitlets==5.9.0
-transformers==4.33.1
-trl==0.7.1
-typer==0.9.0
-typing_extensions==4.5.0
-urllib3==1.26.15
-virtualenv==20.20.0
-wasabi==1.1.2
-wcwidth==0.2.6
-Werkzeug==2.3.4
-whitenoise==6.4.0
-widgetsnbextension==4.0.8
-wrapt==1.14.1
-xxhash==3.2.0
-yarl==1.9.2
+django-filter==23.3
+djangorestframework==3.14.0
