--- a/test_project/requirements.txt
+++ b/test_project/requirements.txt
@@ -1,5 +1,8 @@
 Django==4.1.7
 django-filter==23.3
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.0
 fontawesomefree==6.4.0
 Pillow==9.5.0
+pytest==7.4.2
+pytest-django==4.5.2
