--- a/test_project/Dockerfile
+++ b/test_project/Dockerfile
@@ -8,6 +8,14 @@ ENV PYTHONUNBUFFERED 1
 # Set the working directory in the container
 WORKDIR /usr/src/app
 
+# Create a non-root user with an arbitrary UID (10014 is used here)
+# Comment when not in use [Only used for Choreo]
+RUN useradd -m -u 10014 appuser
+
+# Switch to the non-root user
+# Comment when not in use [Only used for Choreo]
+USER appuser
+
 # Copy the requirements.txt file to the working directory
 COPY ./requirement_overall.txt .
 
@@ -22,3 +30,4 @@ EXPOSE 8000
 
 # Set the command to start the Django server
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+
